changed picture path

--- a/simple site/index.html
+++ b/simple site/index.html
@@ -39,7 +39,7 @@
     <div class="body-wrap">
 
         <div class="img-wrap">
-            <img src="logo_devier.jpg" alt="devier home" />
+            <img src="logo_devier.png" alt="devier home" />
         </div>
 
     </div>
